# Thai-Movie-Subtitle-Downloader

./: README.md  movies.txt  open-subs-api-key.txt  opensubs-download.py  pyproject.toml
